--- a/index.html
+++ b/index.html
@@ -3,8 +3,134 @@
 <head>
     <meta charset="UTF-8">
     <title>HTML Resume</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 </head>
 <body>
+
+<div class="resume">
+    <div class="resume_left">
+        <div class="resume_profile">
+            <img src="profile.jpg" alt="profile_pic">
+        </div>
+        <div class="resume_content">
+            <div class="resume_item resume_info">
+                <div class="title">
+                    <p class="bold">Dominik Remetei</p>
+                    <p class="regular">Web developer</p>
+                </div>
+                <ul>
+                    <li>
+                        <div class="icon">
+                            <i class="fas fa-map-signs"></i>
+                        </div>
+                        <div class="data">
+                            Schodová 2, Brno <br/> Czech
+                        </div>
+                    </li>
+                    <li>
+                        <div class="icon">
+                            <i class="fas fa-mobile-alt"></i>
+                        </div>
+                        <div class="data">
+                            +420 724087005
+                        </div>
+                    </li>
+                    <li>
+                        <div class="icon">
+                            <i class="fas fa-envelope"></i>
+                        </div>
+                        <div class="data">
+                            drpoustevnik@gmail.com
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="resume_item resume_skills">
+                <div class="title">
+                    <p class="bold">skill's</p>
+                </div>
+                <ul>
+                    <li>
+                        <div class="skill_name">
+                            REACT
+                        </div>
+                        <div class="skill_progress">
+                            <span style="width: 78%;"></span>
+                        </div>
+                        <div class="skill_per">78%</div>
+                    </li>
+                    <li>
+                        <div class="skill_name">
+                            NODE
+                        </div>
+                        <div class="skill_progress">
+                            <span style="width: 70%;"></span>
+                        </div>
+                        <div class="skill_per">70%</div>
+                    </li>
+                    <li>
+                        <div class="skill_name">
+                            CYPHER
+                        </div>
+                        <div class="skill_progress">
+                            <span style="width: 75%;"></span>
+                        </div>
+                        <div class="skill_per">75%</div>
+                    </li>
+                    <li>
+                        <div class="skill_name">
+                            PYTHON
+                        </div>
+                        <div class="skill_progress">
+                            <span style="width: 80%;"></span>
+                        </div>
+                        <div class="skill_per">85%</div>
+                    </li>
+                    <li>
+                        <div class="skill_name">
+                            GRAPHQL
+                        </div>
+                        <div class="skill_progress">
+                            <span style="width: 70%;"></span>
+                        </div>
+                        <div class="skill_per">70%</div>
+                    </li>
+                </ul>
+            </div>
+            <div class="resume_item resume_social">
+                <div class="title">
+                    <p class="bold">Social</p>
+                </div>
+                <ul>
+                    <li>
+                        <div class="icon">
+                            <i class="fab fa-facebook-square"></i>
+                        </div>
+                        <div class="data">
+                            <p class="semi-bold">Facebook</p>
+                            <p><a href="https://www.facebook.com/doomrem" target="_blank">facebook.com/doomrem</a></p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="icon">
+                            <i class="fab fa-linkedin"></i>
+                        </div>
+                        <div class="data">
+                            <p class="semi-bold">LinkedIn</p>
+                            <p><a href="https://www.linkedin.com/in/domrem" target="_blank">linkedin.com/in/domrem</a></p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="resume_right">
+
+    </div>
+</div>
 
 </body>
 </html>
