adjusted the css to use vars on all colors

--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
                             <i class="fas fa-envelope"></i>
                         </div>
                         <div class="data">
-                            drpoustevnik@gmail.com
+                            <a href="mailto:drpoustevnik@gmail.com">drpoustevnik@gmail.com</a>
                         </div>
                     </li>
                 </ul>
             </div>
             <div class="resume_item resume_skills">
                 <div class="title">
-                    <p class="bold">skill's</p>
+                    <p class="bold">skills</p>
                 </div>
                 <ul>
                     <li>
