added content of the right side

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>HTML Resume</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
+    <script src="https://kit.fontawesome.com/73414bb0c4.js"></script>
 </head>
 <body>
 
@@ -118,7 +118,8 @@
                         </div>
                         <div class="data">
                             <p class="semi-bold">LinkedIn</p>
-                            <p><a href="https://www.linkedin.com/in/domrem" target="_blank">linkedin.com/in/domrem</a></p>
+                            <p><a href="https://www.linkedin.com/in/domrem" target="_blank">linkedin.com/in/domrem</a>
+                            </p>
                         </div>
                     </li>
                 </ul>
@@ -128,7 +129,88 @@
 
 
     <div class="resume_right">
-
+        <div class="resume_item resume_about">
+            <div class="title">
+                <p class="bold">About</p>
+            </div>
+            <div class="story">
+                <p>I'm formally educated in Tourism and Marketing, having studied in Czech, France, and Denmark. I have
+                    an international working experience from academical as well as commercial environment.</p>
+                <p>In the past 2 years I've transitioned to the world of web development starting with Python and
+                    currently JavaScript is my daily tool of choice</p>
+            </div>
+        </div>
+        <div class="resume_item resume_work">
+            <div class="title">
+                <p class="bold">Work Experience</p>
+            </div>
+            <ul>
+                <li>
+                    <div class="date">2019 - 2020</div>
+                    <div class="info">
+                        <p class="semi-bold">Web Developer</p>
+                        <p>In 2019, I've moved to full-time development. I use various tools on a daily basis. Aside
+                            from the skills mentioned, I've worked with Docker, BaseX, Neo4j, Redis, various APIs and
+                            other management technologies, such as Mailchimp, Mandrill, HubSpot or Intercom.</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="date">2018 - 2019</div>
+                    <div class="info">
+                        <p class="semi-bold">Content Manager</p>
+                        <p>I've started to collaborate with Engeto already in 2017. As content manager I've been
+                            improving the quality of various IT courses. I've got quite familiar with Git, Markdown,
+                            HTML5 and also CSS3. During these first two years I've had the opportunity to act as a
+                            python
+                            lecturer, python tester. </p>
+                    </div>
+                </li>
+                <li>
+                    <div class="date">2016 - 2017</div>
+                    <div class="info">
+                        <p class="semi-bold">Product Development Intern</p>
+                        <p>The dynamic environment of Philips HQ taught me how to navigate with
+                            a numerous group of people from different teams. As product developer, I had to analyze
+                            market data, online portfolio, suggest counteractions, coordinate various areas of multiple
+                            projects, drive product launches and more.</p>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="resume_item resume_education">
+            <div class="title">
+                <p class="bold">Education</p>
+            </div>
+            <ul>
+                <li>
+                    <div class="date">2017 - 2019</div>
+                    <div class="info">
+                        <p class="semi-bold">Self-education</p>
+                        <p>Towards the end of my master's degree I've started to use Python and then transitioned toward
+                            web development with Django, React and Node JS. </p>
+                    </div>
+                </li>
+                <li>
+                    <div class="date">2015 - 2017</div>
+                    <div class="info">
+                        <p class="semi-bold">Aalborg University</p>
+                        <p>AAU teaching method is Problem Based Learning (PBL) - learning through case studies of
+                            international companies.</p>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="resume_item resume_hobby">
+            <div class="title">
+                <p class="bold">Hobby</p>
+            </div>
+            <ul>
+                <li><i class="fas fa-music"></i></li>
+                <li><i class="fas fa-hiking"></i></li>
+                <li><i class="fas fa-brain"></i></li>
+                <li><i class="fas fa-book"></i></li>
+            </ul>
+        </div>
     </div>
 </div>
 
