--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
                         <div class="skill_progress">
                             <span style="width: 78%;"></span>
                         </div>
-                        <div class="skill_per">78%</div>
+                        <div class="skill_per">
+                            <i class="fab fa-react"></i>
+                        </div>
                     </li>
                     <li>
                         <div class="skill_name">
@@ -67,7 +69,9 @@
                         <div class="skill_progress">
                             <span style="width: 70%;"></span>
                         </div>
-                        <div class="skill_per">70%</div>
+                        <div class="skill_per">
+                            <i class="fab fa-node-js"></i>
+                        </div>
                     </li>
                     <li>
                         <div class="skill_name">
@@ -76,7 +80,9 @@
                         <div class="skill_progress">
                             <span style="width: 75%;"></span>
                         </div>
-                        <div class="skill_per">75%</div>
+                        <div class="skill_per">
+                            <i class="fas fa-database"></i>
+                        </div>
                     </li>
                     <li>
                         <div class="skill_name">
@@ -85,7 +91,9 @@
                         <div class="skill_progress">
                             <span style="width: 80%;"></span>
                         </div>
-                        <div class="skill_per">85%</div>
+                        <div class="skill_per">
+                            <i class="fab fa-python"></i>
+                        </div>
                     </li>
                     <li>
                         <div class="skill_name">
@@ -94,7 +102,9 @@
                         <div class="skill_progress">
                             <span style="width: 70%;"></span>
                         </div>
-                        <div class="skill_per">70%</div>
+                        <div class="skill_per">
+                            <i class="fab fa-connectdevelop"></i>
+                        </div>
                     </li>
                 </ul>
             </div>
