--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <i class="fas fa-map-signs"></i>
                         </div>
                         <div class="data">
-                            Schodová 2, Brno <br/> Czech
+                            Brno, Czechia
                         </div>
                     </li>
                     <li>
